# doctransformers

./: .gitignore  README.md  example_docdataset.ipynb  example_doctrainer.ipynb  pyproject.toml
doctransformers/: __init__.py  _lazyImport.py
doctransformers/datasets/: __init__.py  create.py  doc_dataset.py
doctransformers/transformers/: __init__.py  doc_trainer.py
